--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aleksandrmolchagin.com/",
   "dependencies": {
     "@react-three/drei": "^7.22.9",
     "@react-three/fiber": "^7.0.21",
